# prisem-rpc

./: .bumpversion.cfg  .gitattributes  .gitignore  AUTHORS  MANIFEST.in  Makefile  NOTICE  README.rst  config  requirements.txt  setup.cfg  setup.py
docs/: Makefile  README.txt  dimsvars.j2  dimsvars.txt  sphinx-setup.txt
docs/source/: conf.py  dataquery.rst  index.rst  installation.rst  introduction.rst
rpc/: logmonclient.py  rpc_common.py  rpcclient.py  rpcrequest.py  rpcresponse.py  rpcserver.py
scripts/: EXAMPLE.txt  LICENSE.txt  MANIFEST.in  README  USAGE.txt  _version.py  anon_client  anon_server  cifbulk_client  cifbulk_server  crosscor  crosscor_client  crosscor_server  cumdist  ipgrep_networks.txt  ipgrep_networks.yml  ipgrep_networks_prisem.txt  logmon  networks_prisem.txt  rabbitmq-config-example.txt  rdb.py  rpcserver  rwfind_client  rwfind_server
scripts/puka/: rpc_client.py.html  rpc_server.py.html
yaml/: Makefile  README.md  prisem.yml  prisem2.yml  yamltest
