[metadata]
name = prisem-rpc
description = PRISEM RPC scripts
summary = PRISEM RPC utilities
long_description = PRISEM RPC clients and services
description-file = README.rst
author = Dave Dittrich
author-email = dittrich@speakeasy.net
home-page = http://github.com/davedittrich/prisem-rpc
url = http://github.com/davedittrich/prisem-rpc
maintainer = Dave Dittrich
maintainer-email = dave.dittrich@gmail.com
license = Apache License Version 2.0
classifier =
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Incident Responders
    Intended Audience :: Computer Security Researchers
    License :: OSI Approved :: Apache License Version 2.0
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

keywords =
    prisem
    rpc
    amqp

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[files]
packages = rpc
scripts =
  scripts/anon_client
  scripts/anon_server
  scripts/cifbulk_client
  scripts/cifbulk_server
  scripts/crosscor
  scripts/crosscor_client
  scripts/crosscor_server
  scripts/cumdist
  scripts/logmon
  scripts/rpcserver
  scripts/rwfind_client
  scripts/rwfind_server

[entry_points]
pbr.config.drivers =
  plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = rpc/_version.py
versionfile_build = rpc/_version.py
tag_prefix = prisem-rpc-
parentdir_prefix = prisem-rpc-
